<resources>
    <string name="app_name">EasyInsure</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="model">Model</string>
    <string name="displacement">CC / Displacement</string>
    <string name="registrationNumber">Registration Number</string>
    <string name="policyDate">Policy Date</string>
    <string name="policyExpiryDate">Policy Expiry Date</string>
    <string name="chassisNumber">Chassis Number</string>
    <string name="engineNumber">Engine Number</string>
    <string name="vehicleCompany">Vehicle Company</string>

    <string-array name="vehicle_arrays">
        <item>Car</item>
        <item>Bike</item>
    </string-array>

    <string name="Rs">\u20B9</string>
    <string name="input_chassisNumber">Chassis Number</string>
    <string name="input_description">Description</string>
    <string name="input_registrationYear">Registration Year</string>
    <string name="input_vehicleCompany">Company</string>
    <string name="input_vehicleModel">Vehicle Model</string>
    <string name="input_makeDescription">Make Description</string>
    <string name="input_modelDescription">Model Description</string>
    <string name="input_numberOfSeats">Seats</string>
    <string name="input_colour">Color</string>
    <string name="input_engineNumber">Engine Number</string>
    <string name="input_fuelType">Fuel Type</string>
    <string name="input_registrationDate">Registration Date</string>
    <string name="input_location">Location</string>

</resources>
